--- a/issues/1142/meta.yaml
+++ b/issues/1142/meta.yaml
@@ -1,3 +1,3 @@
 id: 1142
-publication_date: 2018-02-15
-cutoff_date: 2018-02-01
+publication_date: 2018-02-15T00:00:00.000Z
+cutoff_date: 2018-02-01T00:00:00.000Z
