--- a/issues/1111/meta.yaml
+++ b/issues/1111/meta.yaml
@@ -1,3 +1,3 @@
 id: 1111
-publication_date: 2016-11-01
-cutoff_date: 2016-10-18
+publication_date: 2016-11-01T00:00:00.000Z
+cutoff_date: 2016-10-18T00:00:00.000Z
