--- a/issues/1088/meta.yaml
+++ b/issues/1088/meta.yaml
@@ -1,3 +1,3 @@
 id: 1088
-publication_date: 2015-11-15
-cutoff_date: 2015-11-02
+publication_date: 2015-11-15T00:00:00.000Z
+cutoff_date: 2015-11-02T00:00:00.000Z
