--- a/issues/1086/meta.yaml
+++ b/issues/1086/meta.yaml
@@ -1,3 +1,3 @@
 id: 1086
-publication_date: 2015-10-15
-cutoff_date: 2015-10-01
+publication_date: 2015-10-15T00:00:00.000Z
+cutoff_date: 2015-10-01T00:00:00.000Z
