--- a/issues/1081/meta.yaml
+++ b/issues/1081/meta.yaml
@@ -1,3 +1,3 @@
 id: 1081
-publication_date: 2015-08-01
-cutoff_date: 2015-07-20
+publication_date: 2015-08-01T00:00:00.000Z
+cutoff_date: 2015-07-20T00:00:00.000Z
