--- a/issues/1073/meta.yaml
+++ b/issues/1073/meta.yaml
@@ -1,3 +1,3 @@
 id: 1073
-publication_date: 2015-04-01
-cutoff_date: 2015-03-18
+publication_date: 2015-04-01T00:00:00.000Z
+cutoff_date: 2015-03-18T00:00:00.000Z
