--- a/issues/1067/meta.yaml
+++ b/issues/1067/meta.yaml
@@ -1,3 +1,3 @@
 id: 1067
-publication_date: 2015-01-01
-cutoff_date: 2014-12-11
+publication_date: 2015-01-01T00:00:00.000Z
+cutoff_date: 2014-12-11T00:00:00.000Z
