--- a/issues/1125/annexes.yaml
+++ b/issues/1125/annexes.yaml
@@ -1,4 +1,4 @@
 Q708_SANC:
-  position_on: 2017-06-01
+  position_on: 2017-06-01T00:00:00.000Z
 E218_TRCC:
-  position_on: 2017-06-01
+  position_on: 2017-06-01T00:00:00.000Z
