--- a/issues/1112/meta.yaml
+++ b/issues/1112/meta.yaml
@@ -1,3 +1,3 @@
 id: 1112
-publication_date: 2016-11-15
-cutoff_date: 2016-11-01
+publication_date: 2016-11-15T00:00:00.000Z
+cutoff_date: 2016-11-01T00:00:00.000Z
