--- a/issues/1148/meta.yaml
+++ b/issues/1148/meta.yaml
@@ -1,3 +1,3 @@
 id: 1148
-publication_date: 2018-06-15
-cutoff_date: 2018-06-01
+publication_date: 2018-05-15T00:00:00.000Z
+cutoff_date: 2018-05-01T00:00:00.000Z
