--- a/issues/1129/meta.yaml
+++ b/issues/1129/meta.yaml
@@ -1,3 +1,3 @@
 id: 1129
-publication_date: 2017-08-01
-cutoff_date: 2017-07-17
+publication_date: 2017-08-01T00:00:00.000Z
+cutoff_date: 2017-07-17T00:00:00.000Z
