--- a/issues/1135/meta.yaml
+++ b/issues/1135/meta.yaml
@@ -1,3 +1,3 @@
 id: 1135
-publication_date: 2017-11-01
-cutoff_date: 2017-10-16
+publication_date: 2017-11-01T00:00:00.000Z
+cutoff_date: 2017-10-16T00:00:00.000Z
