--- a/issues/1135/general.yaml
+++ b/issues/1135/general.yaml
@@ -6,14 +6,10 @@ messages:
     type: running_annexes
   - type: approved_recommendations
     items:
-      'G.873.1 ': 2017-10-01
-      'G.8271.1/Y.1366.1 ': 2017-10-01
-      'G.8273.3/Y.1368.3 ': 2017-10-01
-      'G.9807.1 (2016) Amd. 1 ': 2017-10-01
-      'X.1127 ': 2017-10-01
-      'X.1213 ': 2017-10-01
-      'X.1248 ': 2017-10-01
-      'X.1541 ': 2017-10-01
+      'G.873.1 ': 2017-10-01T00:00:00.000Z
+      'G.8271.1/Y.1366.1 ': 2017-10-01T00:00:00.000Z
+      'G.8273.3/Y.1368.3 ': 2017-10-01T00:00:00.000Z
+      'G.9807.1 (2016) Amd. 1 ': 2017-10-01T00:00:00.000Z
     by: AAP-22
     procedures: Recommendation ITU-T A.8
   - contents:
@@ -23,7 +19,7 @@ messages:
         contact:
           en: "Mr William H. Moses\nDirector, Bureau of Commercial Development\nMr Jonathan Temol\nChief, Division of Communication\nMinistry of Public Infrastructure, Industries and Commerce\nP.O. Box 1471 \nKOROR, Palau 96940\nTel: \t+680 767 2109\nFax: \t+680 767 3207\nE-mail: \tdot@palaunet.com; jngiwal@gmail.com\nURL: \twww.palaugov.pw/bureau-of-commercial-development/"
         communications:
-          - date: 2017-10-10
+          - date: 2017-10-10T00:00:00.000Z
             contents:
               en:
                 type: doc
