--- a/issues/1158/meta.yaml
+++ b/issues/1158/meta.yaml
@@ -1,3 +1,3 @@
 id: 1158
-publication_date: 2018-10-15
-cutoff_date: 2018-09-28
+publication_date: 2018-10-15T00:00:00.000Z
+cutoff_date: 2018-09-28T00:00:00.000Z
